Added simple hero message

--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
 <head>
 	<title>Vue.js Forn Builder</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+	<!-- Styles -->
+	<style type="text/css">
+
+		.container{max-width: 750px}
+
+	</style>
+
+
 </head>
 <body>
 
+<div class="container" id="formBuilder">
+	<div class="row">
+		
+		<div class="col-xs-12">
+			<div class="jumbotron">
+			  <h1 class="primary-color">VUE.JS Form Builder!</h1>
+			  <p>This is a form builder created completely with Vue.js. Feel 
+			  free to fork it, scrap it, extend it, imrpove it, but mostly have fun with it</p>
+			  <p><a class="btn btn-primary btn-lg" href="#" role="button">Fork</a></p>
+			</div>			
+		</div>
 
+		<!-- FORM BUILDER -->
+		<section class="form-builer"></section>
+
+		<!-- RENDER FORM -->
+		<section class="form-render"></section>
+
+	</div>
+</div>
 
 
 
