--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
 		.form-render{background-color: rgba(0,0,0,.2); color: #fff;}
 	</style>
-
-
 </head>
 <body>
 
@@ -31,6 +29,7 @@
 
 		<!-- FORM BUILDER -->
 		<section class="form-builer col-xs-12 col-sm-6">
+			
 			<div class="form-group">
 				<label>Question Type:</label>
 				<select v-model="preForm.type" class="form-control">
@@ -46,15 +45,14 @@
 			<template v-if="preForm.type !== null && preForm.type !== '' && preForm.type !== undefined">
 				<div class="form-group">
 					<label>Questin Name:</label> 
-
-					<!-- Text | Textarea | Checkbox -->
 					<input v-model="preForm.label" type="text" class="form-control">
-
 					<template v-if="preForm.type === 'dropdown' || preForm.type === 'radio'">						
 						<div class="form-group">
 							<label>Option:</label><input class="form-control" type="text" v-model="option"> 	
-							<span v-on="click: addOption()" class="btn btn-primary">Add Option</span>				
 						</div>					
+						<div class="form-group">
+							<span v-on="click: addOption()" class="btn btn-primary">Add Option</span>			
+						</div>
 						<ol><li v-repeat="preForm.answers">{{$value}}</li></ol>
 					</template>
 				</div>
@@ -62,10 +60,8 @@
 					<span v-if="preForm.label !== null" v-on="click: addToForm()" class="btn btn-default">Add To Form</span>
 				</div>
 			</template>
-			<!-- <pre><p>{{preForm | json 2}}</p></pre> -->
+
 		</section>
-
-
 
 		<!-- RENDER FORM -->
 		<section v-if="form.length > 0" class="form-render col-xs-12 col-sm-6">
@@ -101,9 +97,6 @@
 
 	</div>
 </div>
-
-
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.12.10/vue.js"></script>
 <script type="text/javascript" src="main.js"></script>
